@@ -55,7 +55,6 @@
 #define IOCTL_DI_FILE_GET		0xF8
 #define IOCTL_DI_FRAG_SET		0xF9
 #define IOCTL_DI_MODE_GET		0xFA
-#define IOCTL_DI_HELLO			0xFB
 #define IOCTL_DI_SAVE_CONFIG		0xFE
 #define IOCTL_DI_CUSTOMCMD		0xFF
 
