@@ -183,10 +183,6 @@ int usbstorage_Init(void)
 	/* Initialize USB storage */
 	os_ioctlv(fd, USB_IOCTL_UMS_INIT, 0, 0, NULL);
 
-	//sectorSz = 0x200; // 512
-
-	//return 0;
-//#if 0
 	/* Get device capacity */
 	ret = __usbstorage_GetCapacity(NULL);
 	if (ret == 0)
@@ -198,7 +194,6 @@ err:
 	/* Close USB device */
 	usbstorage_Shutdown();	
 	return -22;
-//#endif
 }
 
 bool usbstorage_Shutdown(void)
